tests/fixtures/invalid/non_numeric_lat.gpx
<?xml version="1.0" encoding="UTF-8"?>
<gpx xmlns="http://www.topografix.com/GPX/1/1" version="1.1" creator="Test">
  <wpt lat="not_a_number" lon="13.4050">
    <name>Non-numeric latitude</name>
  </wpt>
</gpx>
